Chore: solves linting errors

--- a/package.json
+++ b/package.json
@@ -48,10 +48,14 @@
     "@babel/eslint-parser": "7.x",
     "@babel/plugin-syntax-jsx": "7.x",
     "@babel/preset-react": "7.x",
-    "eslint": "7.x",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb": "18.x",
-    "eslint-plugin-import": "2.x",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "7.x",
     "eslint-plugin-react-hooks": "4.x",
     "sass": "^1.42.1",
